frontend/test/should_fail/computations_no_exec.grg
test t()
{
}

function bar() : int
{
	exec( t() ); // no exec in function
	return(42);
}
